格式调整-文字调整

--- a/templates/modules/widgets/aside/profile.html
+++ b/templates/modules/widgets/aside/profile.html
@@ -38,7 +38,7 @@
                 </ul>
                 <ul class="grid grid-cols-4 pt-4 w-full px-2 text-lg" th:with="stats = ${siteStatsFinder.getStats()}">
                     <li class="col-span-1 text-center"><span class="text-ob-bright">[[${stats.post}]]</span>
-                        <p class="text-base">文章</p>
+                        <p class="text-base">视频</p>
                     </li>
                     <li class="col-span-1 text-center"><span class="text-ob-bright">[[${stats.category}]]</span>
                         <p class="text-base">分类</p>
