修复app 下无法点击分页的问题

--- a/templates/assets/css/aurora.css
+++ b/templates/assets/css/aurora.css
@@ -2157,7 +2157,7 @@ img, video {
 }
 
 .mt-20 {
-    margin-top: 0rem;
+    margin-top: 0rem
 }
 .box-border {
     box-sizing: border-box
@@ -4158,7 +4158,8 @@ body {
     margin-bottom: 2rem;
     display: flex;
     flex-direction: row;
-    justify-content: center
+    justify-content: center;
+    z-index: 1;
 }
 
 .paginator ul {
