--- a/templates/assets/css/aurora.css
+++ b/templates/assets/css/aurora.css
@@ -3316,12 +3316,13 @@ div::-webkit-scrollbar-track {
 }
 
 .logo-image {
-    height: 200px;
-    width: 200px;
+    display: none;
+    height: 20px;
+    width: 20px;
     max-width: 200px;
-    top: -60px;
-    left: -60px;
-    opacity: .05;
+    top: 0px;
+    left: 0px;
+    opacity: .3;
     position: absolute;
     margin-right: .5rem;
     border-radius: 9999px
