--- a/templates/modules/main.html
+++ b/templates/modules/main.html
@@ -8,7 +8,7 @@
             <svg class="svg-icon inline-block mr-2 inline-block mr-2">
                 <use href="#icon-article" fill="currentColor"
                      stroke="var(--background-primary)"></use>
-            </svg> 文章列表
+            </svg> 最近更新
             <span class="absolute bottom-0 h-1 w-24 rounded-full"
                   style="background: linear-gradient(130deg, rgb(36, 198, 220), rgb(84, 51, 255) 41.07%, rgb(255, 0, 153) 76.05%);"></span>
         </p>
