--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <th:block th:replace="~{macro/app-banner :: app-banner(img=${theme.config.top.index_img})}"/>
     <div class="relative z-10">
         <div class="block">
-            <th:block th:replace="~{modules/feature-article :: feature-article}"></th:block>
+            <th:block th:replace="~{modules/main-rec :: main-rec}"></th:block>
             <th:block th:replace="~{modules/main :: main}"></th:block>
         </div>
     </div>
