--- a/templates/macro/post-card.html
+++ b/templates/macro/post-card.html
@@ -31,7 +31,7 @@
                 <span class="thumbnail-screen"
                       style="background: linear-gradient(130deg, rgb(36, 198, 220), rgb(84, 51, 255) 41.07%, rgb(255, 0, 153) 76.05%);"></span>
             </div>
-            <div class="article-content">
+            <div class="article-content" style="margin-top: 10px">
             <span style="text-wrap: nowrap; overflow: hidden;">
                 <th:block th:if="${not #lists.isEmpty(post.categories)}"
                           th:each="category,stat : ${post.categories}">
@@ -51,9 +51,9 @@
                 <a th:href="@{${post.status.permalink}}" class="">
                     <h1 data-dia="article-link"
                         th:text="${post.spec.title}"
-                        style="max-height: 3em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical;"></h1>
+                        style="margin-bottom:10px; max-height: 3em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; font-size: 1.2em;"></h1>
                 </a>
-                <p th:text="${post.status.excerpt}" class="article-content"></p>
+                <p th:text="${post.status.excerpt}" class="article-content" style="display: none"></p>
                 <div class="article-footer" th:with="owner=${post.owner}">
                     <div class="flex flex-row items-center">
                         <img class="hover:opacity-50 cursor-pointer"
