--- a/templates/macro/post-card.html
+++ b/templates/macro/post-card.html
@@ -31,7 +31,7 @@
                 <span class="thumbnail-screen"
                       style="background: linear-gradient(130deg, rgb(36, 198, 220), rgb(84, 51, 255) 41.07%, rgb(255, 0, 153) 76.05%);"></span>
             </div>
-            <div class="article-content" style="margin-top: 10px">
+            <div class="article-content" style="margin-top: 90px">
             <span style="text-wrap: nowrap; overflow: hidden;">
                 <th:block th:if="${not #lists.isEmpty(post.categories)}"
                           th:each="category,stat : ${post.categories}">
@@ -51,17 +51,15 @@
                 <a th:href="@{${post.status.permalink}}" class="">
                     <h1 data-dia="article-link"
                         th:text="${post.spec.title}"
-                        style="margin-bottom:10px; max-height: 3em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; font-size: 1.2em;"></h1>
+                        style="line-height: 1.2em;margin-bottom: 0em; max-height: 3em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; font-size: 1em;"></h1>
                 </a>
                 <p th:text="${post.status.excerpt}" class="article-content" style="display: none"></p>
                 <div class="article-footer" th:with="owner=${post.owner}">
                     <div class="flex flex-row items-center">
-                        <img class="hover:opacity-50 cursor-pointer"
-                             th:src="${owner.avatar==null? ASSETS+'/img/ObsidianestLogo.png': owner.avatar}"
-                             alt="author avatar">
-                        <span class="text-ob-dim">
-        <strong class="text-ob-normal pr-1.5 hover:text-ob hover:opacity-50 cursor-pointer"
-                th:text="${owner.displayName}"></strong>发布于 [[${#dates.format(post.spec.publishTime, 'MMMM dd,yyyy')}]]</span>
+
+                        <span class="text-ob-dim" style="float: right;">
+                            [[${#dates.format(post.spec.publishTime, 'MMMM dd,yyyy')}]]
+                        </span>
                     </div>
                 </div>
             </div>
