--- a/templates/post.html
+++ b/templates/post.html
@@ -116,7 +116,7 @@
                     });
 
                     // Check if there are no more hidden items
-                    if (document.querySelectorAll('.hidden').length === 0) {
+                    if (document.querySelectorAll('.post-item-aritle.hidden').length === 0) {
                         this.style.display = 'none';
                     }
                 });
