--- a/templates/macro/post-card.html
+++ b/templates/macro/post-card.html
@@ -16,7 +16,8 @@
 </style>
 
 <th:block th:fragment="post-card(feature,post)">
-    <li class="article-container" th:with="default_img=${#strings.contains(theme.config.article.default_img,'http') ? ((#strings.contains(theme.config.article.default_img,'?') ? theme.config.article.default_img : theme.config.article.default_img+'?')+','+post.spec.title): theme.config.article.default_img}">
+    <li class="article-container"
+        th:with="default_img=${#strings.contains(theme.config.article.default_img,'http') ? ((#strings.contains(theme.config.article.default_img,'?') ? theme.config.article.default_img : theme.config.article.default_img+'?')+','+post.spec.title): theme.config.article.default_img}">
         <span th:if="${feature}" class="article-tag">
               <b>
                 <svg class="svg-icon">
@@ -31,36 +32,28 @@
                 <span class="thumbnail-screen"
                       style="background: linear-gradient(130deg, rgb(36, 198, 220), rgb(84, 51, 255) 41.07%, rgb(255, 0, 153) 76.05%);"></span>
             </div>
-            <div class="article-content" style="margin-top: 90px">
-            <span style="text-wrap: nowrap; overflow: hidden;">
-                <th:block th:if="${not #lists.isEmpty(post.categories)}"
-                          th:each="category,stat : ${post.categories}">
-                    <a th:if="${stat.index}<=2" th:href="@{${category.status.permalink}}">
-                      <b>[[${category.spec.displayName}]]</b>
-                    </a>
-                </th:block>
-                <ul style="max-width: 100px">
-                    <li th:if="${not #lists.isEmpty(post.tags)}"
-                        th:each="tag,stat : ${post.tags}">
-                        <a th:if="${stat.index}<=3" th:href="@{${tag.status.permalink}}">
-                            <em># [[${tag.spec.displayName}]]</em>
-                        </a>
-                    </li>
-                </ul>
-            </span>
+            <div class="article-content" style="margin-top: 90px;padding-bottom: 0em">
+
                 <a th:href="@{${post.status.permalink}}" class="">
                     <h1 data-dia="article-link"
                         th:text="${post.spec.title}"
-                        style="line-height: 1.2em;margin-bottom: 0em; max-height: 3em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; font-size: 1em;"></h1>
+                        style="line-height: 1.2em;margin-bottom: 0em; max-height: 3em; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; font-size: 0.9em;"></h1>
                 </a>
                 <p th:text="${post.status.excerpt}" class="article-content" style="display: none"></p>
-                <div class="article-footer" th:with="owner=${post.owner}">
+                <div class="article-footer" th:with="owner=${post.owner}" style="display: flex; justify-content: space-between;">
                     <div class="flex flex-row items-center">
+                        <span>
+                            <th:block th:if="${not #lists.isEmpty(post.categories)}" th:each="category,stat : ${post.categories}">
+                                <a th:if="${stat.index}<=2" th:href="@{${category.status.permalink}}">
+                                    <b>[[${category.spec.displayName}]]</b>
+                                </a>
+                            </th:block>
+                        </span>
 
-                        <span class="text-ob-dim" style="float: right;">
+                        </div>
+                        <span class="text-ob-dim">
                             [[${#dates.format(post.spec.publishTime, 'MMMM dd,yyyy')}]]
                         </span>
-                    </div>
                 </div>
             </div>
         </div>
